# vpn-proxy

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  cli.py  deploy_production.sh  k8s.py  main.py  proxy_units.yml  pyproject.toml  requirements.txt  settings.py  squid_unit.py  web_apis.py
crud/: proxies.py
db/: database.py  models.py  schemas.py
db/crud/: proxies.py
kube/: config  token.key
service/: dependencies.py  routers.py
service/api/v1/: manage.py
squid/: squid.conf
utils/: proxy_unit.py  utils.py
