[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["weifan <p988744@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
